Arreglos al evaluar

--- a/templates/evaluacion/postevaluacion.html
+++ b/templates/evaluacion/postevaluacion.html
@@ -2,12 +2,19 @@
 {% extends 'base.html' %}
 {% block content %}
 
+
+
     <div class="w3-container" id="designers" style="margin-top:50px">
         <h1 class="w3-xxxlarge w3-text-red"><b>Evaluación <i class="w3-text-blue">entregada</i> </b></h1>
+        {% if evaluacion.is_active %}
         <i class="w3-large w3-text-green"><i class="far fa-clock"></i> Aún activa </i>
+        {% else %}
+        <i class="w3-large w3-text-gray"><i class="far fa-calendar-times"></i> Cerrada </i>
+        {% endif %}
+        
         <hr style="width:50px;border:5px solid red" class="w3-round">
         <div class="w3-container w3-center">
-            <p><b>Lambda-Ideas</b> Presentación Tarea 2 <i>CC4401-1/Otoño/2019</i></p>
+            <p><b>{{grupo.nombre}}</b> {{evaluacion.nombre}} <i>{{grupo.curso}}</i></p>
             <p><i class="w3-text-blue">Su operación se ha procesado exitosamente!</i></p></div>
 
         <div class="w3-container">
@@ -38,9 +45,20 @@
             </div>
 
             <div class="w3-panel w3-right w3-half" style="margin-top: 50px">
-                <button class="w3-button w3-xlarge w3-red w3-margin-bottom" style="margin-left: 15%"
-                        onclick="location.href='evaluacion'"><i class="fas fa-pen"></i> Editar evaluación
-                </button>
+               <form action="{% url 'evaluaciones:evaluar' %}" method="post">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="idEvaluacion" value="{{ evaluacion.pk }}">
+                                        <input type="hidden" name="idGrupo" value="{{ grupo.pk }}">
+                                        <input type="hidden" name="idCurso" value="{{ evaluacion.curso.id }}">
+                                        <button class="w3-button w3-red w3-xlarge" type="submit">
+                                        {% if evaluacion.is_active %}
+                                            <i class="fas fa-edit"></i> Editar Evaluación    
+                                        {% else %}
+                                            <i class="far fa-eye"></i> Ver Respuestas
+                                        {% endif %}
+                                        </button>
+                                        
+                                    </form>
                 <button class="w3-button w3-xlarge w3-red" style="margin-left: 15%"
                         onclick="location.href='evaluaciones'"><i class="fas fa-door-open"></i> Volver a evaluaciones
                 </button>
