se modifican algunos detalles visuales

--- a/templates/evaluacion/evaluacion_evaluar.html
+++ b/templates/evaluacion/evaluacion_evaluar.html
@@ -54,7 +54,7 @@
             <li class="w3-padding-16 selected">{{presentador}} </li>
             {% endif %}
             </div>
-            <li class=" opcion w3-padding-16" id="masPresentadores"> Seleccionar evaluador <i style="margin-left: 10px"  class="fas fa-user-plus"></i></li>
+            <li class=" opcion w3-padding-16" id="masPresentadores"> Seleccionar presentador <i style="margin-left: 10px"  class="fas fa-user-plus"></i></li>
             
           </ul>
         </div>
