--- a/templates/evaluacion/evaluacion_detalle.html
+++ b/templates/evaluacion/evaluacion_detalle.html
@@ -111,15 +111,10 @@
                 </div>
                 <div id="Grupos" class="w3-container w3-light-gray w3-round w3-center">
                     <table class="w3-table w3-centered">
-                    <tr>
-                    <th>Número</th>
-                    <th>Nombre</th>
-                    <th></th>
-                    </tr>
-                    <tr>
                         {% for grupo in grupos %}
-                                <td class="w3-center w3-large" style="vertical-align:middle">{{grupo.numero}}
-                                <td class="w3-center w3-large"style="vertical-align:middle">{{ grupo.nombre }}</td>
+                            <tr>
+                                <td class="w3-center" style="vertical-align:middle">{{grupo.numero}}
+                                <td class="w3-center"style="vertical-align:middle">{{ grupo.nombre }}</td>
                                     {% if evaluacion.is_active%}
                                     <td class="w3-light-gray w3-center">
                                         <form action="{% url 'evaluaciones:evaluar' %}" method="post">
@@ -128,7 +123,7 @@
                                         <input type="hidden" name="idGrupo" value="{{ grupo.pk }}">
                                         <input type="hidden" name="idCurso" value="{{ evaluacion.curso.id }}">
 
-                                        <button class="w3-button w3-red w3-round w3-large" type="submit">Evaluar</button>
+                                        <button class="w3-button w3-red w3-round" type="submit">Evaluar</button>
                                     </form>
             
                                     </td>
