--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -10,13 +10,13 @@
         <i class="far fa-arrow-alt-circle-left" style="font-size:300%"></i>
     </div>
 
-{% comment %}    <form action="{% url 'evaluadores:add_profesor' %}" method="post">
+    <form action="{% url 'evaluadores:add_profesor' %}" method="post">
         {% csrf_token %}
         <table class="w3-table">
             {{ addForm.as_table }}
         </table>
         <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
-    </form>{% endcomment %}
+    </form>
 
     <table class="w3-table">
         {% for profesor in profesores_list %}
