--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -14,6 +14,6 @@
     </div>
 
     <div class="w3-container">
-        Has cambiado tu contraseña satisfactoriamente, entra a tu cuenta <a href="{% url 'login' %}">aqui</a>.
+        Has cambiado tu contraseña satisfactoriamente{% if user.is_authenticated %}.{% else %}, entra a tu cuenta <a href="{% url 'login' %}">aqui</a>. {% endif %}
     </div>
 {% endblock %}
