--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -2,21 +2,19 @@
 {% extends 'base.html' %}
 {% block content %}
     <!-- Portada -->
-    <div class="w3-container" id="portada" style="margin-top:300px; margin-bottom:300px">
+    <div class="w3-container" id="portada" style="margin-top:150px; margin-bottom:300px">
         <h1 class="w3-xxxlarge w3-text-red"><b>Bienvenido al sistema de evaluación</b></h1>
         <hr style="width:50px;border:5px solid red" class="w3-round">
         <p>
-        <h3>Seleccione alguna sección para comenzar</h3></p>
-        <i class="far fa-arrow-alt-circle-left" style="font-size:300%"></i>
-    </div>
+        <h3>Formulario para agregar profesor</h3></p>
 
-{% comment %}    <form action="{% url 'evaluadores:add_profesor' %}" method="post">
+    <form action="{% url 'evaluadores:add_profesor' %}" method="post">
         {% csrf_token %}
         <table class="w3-table">
             {{ addForm.as_table }}
         </table>
         <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
-    </form>{% endcomment %}
+    </form>
 
     <table class="w3-table">
         {% for profesor in profesores_list %}
@@ -53,6 +51,7 @@
     </div>
     <p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
                                       class="w3-hover-opacity">w3.css</a></p>
+    </div>
 {% endblock %}
 </div>
 
